--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react-currency-input-field": "^3.9.0",
     "react-dom": "^18.3.1",
     "react-icons": "^5.3.0",
+    "react-router-dom": "^7.1.5",
     "react-scripts": "5.0.1",
     "styled-components": "^6.1.13",
     "web-vitals": "^2.1.4"
